pkg/config/analysis/analyzers/testdata/incorrect-port-name-external-name-service-type.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ns
spec:
  externalName: nginx.example.com
  ports:
  - name: nginx
    port: 443
    protocol: TCP
    targetPort: 443
  type: ExternalName
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc2
  namespace: nginx-ns2
spec:
  externalName: nginx.example.com
  ports:
  - port: 443
    protocol: TCP
    targetPort: 443
  type: ExternalName
--- 
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc3
  namespace: nginx-ns3
spec:
  externalName: nginx.example.com
  ports:
  - name: tcp
    port: 443
    protocol: TCP
    targetPort: 443
  type: ExternalName
