pkg/config/analysis/analyzers/testdata/mtls-global-dr-no-meshpolicy.yaml
# A rule for all traffic specifies MTLS, but we don't have a global mesh policy.
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: dubbo-system
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
