pkg/config/analysis/analyzers/testdata/mtls-meshpolicy-permissive.yaml
# A global mesh policy with no DRs should not cause an error when in permissive mode.
apiVersion: authentication.istio.io/v1alpha1
kind: MeshPolicy
metadata:
  name: default
spec:
  peers:
  - mtls:
      mode: PERMISSIVE
---
