pkg/config/analysis/analyzers/testdata/pod-con-sec-uid.yaml
apiVersion: v1
kind: Pod
metadata:
  name: con-sec-uid
  labels:
    app: helloworld
    version: v1
spec:
  containers:
  - name: helloworld
    image: docker.io/istio/examples-helloworld-v1
    securityContext:
      runAsUser: 1337
    resources:
      requests:
        cpu: "100m"
    imagePullPolicy: IfNotPresent #Always
    ports:
    - containerPort: 5000
